# B-Circuit

./: .gitignore  .travis.yml  B-Circuit.sln  B-Circuit.vcxproj  CMakeLists.txt  README.md
etc/: linux-setup.sh
inc/sim/dc/: Component.hpp  Resistor.hpp
src/: main.cpp
src/sim/dc/: Component.cpp  Component.hpp  Resistor.cpp
tests/: CMakeLists.txt  dc_component.cpp  main.cpp
